--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -7,153 +7,163 @@
     android:background="@drawable/bg"
     tools:context=".MainActivity">
 
-    <include
-        android:id="@+id/appBar"
-        layout="@layout/toolbar"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="129dp" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="32dp">
+            android:orientation="vertical" >
 
-            <ImageView
-                android:id="@+id/img_avatar"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginLeft="8dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/appBar"
-                app:srcCompat="@android:color/darker_gray" />
+            <include
+                android:id="@+id/appBar"
+                layout="@layout/toolbar"
+                tools:layout_editor_absoluteX="0dp"
+                tools:layout_editor_absoluteY="129dp" />
 
-            <TextView
-                android:id="@+id/name_user"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="16dp"
-                android:text="@string/hello_user"
-                android:textColor="@color/white"
-                app:fontFamily="@font/roboto_bold"
-                app:layout_constraintStart_toEndOf="@+id/img_avatar"
-                app:layout_constraintTop_toTopOf="@+id/appBar" />
+                android:layout_marginTop="100dp"
+                android:orientation="vertical"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:id="@+id/line1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="104dp">
-
-            <LinearLayout
-                android:id="@+id/btn_start_session"
-                android:layout_width="400dp"
-                android:layout_height="100dp"
-                android:layout_margin="5dp"
-                android:background="@color/colorCharcoalGrey">
-
-                <ImageView
-                    android:id="@+id/logo_unique_session"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:layout_gravity="center_vertical"
-                    android:paddingLeft="15dp"
-                    app:srcCompat="@drawable/camsimple" />
-
-                <TextView
-                    android:id="@+id/name_unique_session"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="16dp"
-                    android:text="@string/start_session"
-                    android:textColor="@color/white"
-                    android:textSize="20sp"
-                    app:fontFamily="@font/roboto_bold" />
-            </LinearLayout>
+                    android:layout_marginBottom="32dp">
 
-            <LinearLayout
-                android:id="@+id/btn_multi_session"
-                android:layout_width="400dp"
-                android:layout_height="100dp"
-                android:layout_margin="5dp"
-                android:background="@color/colorCharcoalGrey">
+                    <ImageView
+                        android:id="@+id/img_avatar"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_marginLeft="8dp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="@+id/appBar"
+                        app:srcCompat="@android:color/darker_gray" />
 
-                <ImageView
-                    android:id="@+id/logo_multi_session"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:layout_gravity="center_vertical"
-                    android:paddingLeft="15dp"
-                    app:srcCompat="@drawable/cammulti" />
+                    <TextView
+                        android:id="@+id/name_user"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="16dp"
+                        android:text="@string/hello_user"
+                        android:textColor="@color/white"
+                        app:fontFamily="@font/roboto_bold"
+                        app:layout_constraintStart_toEndOf="@+id/img_avatar"
+                        app:layout_constraintTop_toTopOf="@+id/appBar" />
 
-                <TextView
-                    android:id="@+id/name_multi_session"
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:id="@+id/line1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="16dp"
-                    android:text="@string/start_multi_session"
-                    android:textColor="@color/white"
-                    android:textSize="20sp"
-                    app:fontFamily="@font/roboto_bold" />
-            </LinearLayout>
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    tools:layout_editor_absoluteY="104dp">
 
-        </LinearLayout>
+                    <LinearLayout
+                        android:id="@+id/btn_start_session"
+                        android:layout_width="400dp"
+                        android:layout_height="100dp"
+                        android:layout_margin="5dp"
+                        android:background="@color/colorCharcoalGrey">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="236dp">
+                        <ImageView
+                            android:id="@+id/logo_unique_session"
+                            android:layout_width="80dp"
+                            android:layout_height="80dp"
+                            android:layout_gravity="center_vertical"
+                            android:paddingLeft="15dp"
+                            app:srcCompat="@drawable/camsimple" />
 
-            <LinearLayout
-                android:id="@+id/btn_videos"
-                android:layout_width="400dp"
-                android:layout_height="100dp"
-                android:layout_margin="5dp"
-                android:background="@color/colorCharcoalGrey">
+                        <TextView
+                            android:id="@+id/name_unique_session"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginLeft="16dp"
+                            android:text="@string/start_session"
+                            android:textColor="@color/white"
+                            android:textSize="20sp"
+                            app:fontFamily="@font/roboto_bold" />
+                    </LinearLayout>
 
-                <ImageView
-                    android:id="@+id/logo_videos"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:layout_gravity="center_vertical"
-                    android:paddingLeft="15dp"
-                    app:srcCompat="@drawable/video" />
+                    <LinearLayout
+                        android:id="@+id/btn_multi_session"
+                        android:layout_width="400dp"
+                        android:layout_height="100dp"
+                        android:layout_margin="5dp"
+                        android:background="@color/colorCharcoalGrey">
 
-                <TextView
-                    android:id="@+id/name_videos"
+                        <ImageView
+                            android:id="@+id/logo_multi_session"
+                            android:layout_width="80dp"
+                            android:layout_height="80dp"
+                            android:layout_gravity="center_vertical"
+                            android:paddingLeft="15dp"
+                            app:srcCompat="@drawable/cammulti" />
+
+                        <TextView
+                            android:id="@+id/name_multi_session"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginLeft="16dp"
+                            android:text="@string/start_multi_session"
+                            android:textColor="@color/white"
+                            android:textSize="20sp"
+                            app:fontFamily="@font/roboto_bold" />
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="16dp"
-                    android:text="@string/my_videos"
-                    android:textColor="@color/white"
-                    android:textSize="20sp"
-                    app:fontFamily="@font/roboto_bold" />
-            </LinearLayout>
+                    android:layout_marginTop="32dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    tools:layout_editor_absoluteY="236dp">
 
-        </LinearLayout>
-    </LinearLayout>
+                    <LinearLayout
+                        android:id="@+id/btn_videos"
+                        android:layout_width="400dp"
+                        android:layout_height="100dp"
+                        android:layout_margin="5dp"
+                        android:background="@color/colorCharcoalGrey">
+
+                        <ImageView
+                            android:id="@+id/logo_videos"
+                            android:layout_width="80dp"
+                            android:layout_height="80dp"
+                            android:layout_gravity="center_vertical"
+                            android:paddingLeft="15dp"
+                            app:srcCompat="@drawable/video" />
+
+                        <TextView
+                            android:id="@+id/name_videos"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginLeft="16dp"
+                            android:text="@string/my_videos"
+                            android:textColor="@color/white"
+                            android:textSize="20sp"
+                            app:fontFamily="@font/roboto_bold" />
+                    </LinearLayout>
+
+                </LinearLayout>
+            </LinearLayout>
+        </android.support.constraint.ConstraintLayout>
+    </ScrollView>
+
 
 </android.support.constraint.ConstraintLayout>
