--- a/app/src/main/res/layout-land/activity_selected_video.xml
+++ b/app/src/main/res/layout-land/activity_selected_video.xml
@@ -7,114 +7,125 @@
     tools:context=".SelectedVideoActivity"
     android:background="@drawable/bg">
 
-    <include
-        layout="@layout/toolbar"
-        android:id="@+id/appBar"/>
-
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="65dp"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="match_parent">
 
-        <LinearLayout
+        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="40dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
-            android:layout_marginTop="40dp"
-            android:layout_weight="0.3"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
 
-            <VideoView
-                android:id="@+id/vv_preview"
-                android:layout_width="match_parent"
-                android:layout_height="217dp" />
-
-            <TextView
-                android:id="@+id/tv_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/video_tittle"
-                android:textColor="@color/white"
-                android:textSize="18sp"
-                app:fontFamily="@font/roboto_bold" />
-
-            <TextView
-                android:id="@+id/tv_folder"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/folder"
-                android:textColor="@color/white"
-                app:fontFamily="@font/roboto" />
-
-            <TextView
-                android:id="@+id/tv_description"
-                android:layout_width="match_parent"
-                android:layout_height="72dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginTop="8dp"
-                android:text="@string/description"
-                android:textColor="@color/white"
-                android:textSize="12sp"
-                app:fontFamily="@font/roboto" />
+            <include
+                android:id="@+id/appBar"
+                layout="@layout/toolbar" />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                style="?android:attr/buttonBarStyle">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="65dp"
+                app:layout_constraintTop_toTopOf="parent">
 
-                <Button
-                    android:id="@+id/bt_play"
-                    android:layout_width="wrap_content"
-                    android:layout_height="30dp"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
-                    android:layout_weight="0.33"
-                    android:background="@drawable/style_button"
-                    android:text="@string/play_video"
-                    android:textColor="@color/white"
-                    app:fontFamily="@font/roboto_bold"
-                    style="?android:attr/buttonBarButtonStyle"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="40dp"
+                    android:layout_marginLeft="50dp"
+                    android:layout_marginRight="50dp"
+                    android:layout_marginTop="40dp"
+                    android:layout_weight="0.3"
+                    android:orientation="vertical">
 
-                <Button
-                    android:id="@+id/bt_edit"
-                    style="?android:attr/buttonBarButtonStyle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="30dp"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
-                    android:layout_weight="0.33"
-                    android:background="@drawable/style_button_white"
-                    android:text="@string/edit"
-                    android:textColor="@color/colorBlack"
-                    app:fontFamily="@font/roboto_bold" />
+                    <VideoView
+                        android:id="@+id/vv_preview"
+                        android:layout_width="match_parent"
+                        android:layout_height="217dp" />
 
-                <Button
-                    android:id="@+id/bt_upload"
-                    style="?android:attr/buttonBarButtonStyle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="30dp"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
-                    android:layout_weight="0.33"
-                    android:background="@drawable/style_button_white"
-                    android:text="@string/upload"
-                    android:textColor="@color/colorBlack"
-                    app:fontFamily="@font/roboto_bold" />
+                    <TextView
+                        android:id="@+id/tv_title"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/video_tittle"
+                        android:textColor="@color/white"
+                        android:textSize="18sp"
+                        app:fontFamily="@font/roboto_bold" />
+
+                    <TextView
+                        android:id="@+id/tv_folder"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/folder"
+                        android:textColor="@color/white"
+                        app:fontFamily="@font/roboto" />
+
+                    <TextView
+                        android:id="@+id/tv_description"
+                        android:layout_width="match_parent"
+                        android:layout_height="72dp"
+                        android:layout_marginBottom="8dp"
+                        android:layout_marginTop="8dp"
+                        android:text="@string/description"
+                        android:textColor="@color/white"
+                        android:textSize="12sp"
+                        app:fontFamily="@font/roboto" />
+
+                    <LinearLayout
+                        style="?android:attr/buttonBarStyle"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
+
+                        <Button
+                            android:id="@+id/bt_play"
+                            style="?android:attr/buttonBarButtonStyle"
+                            android:layout_width="wrap_content"
+                            android:layout_height="30dp"
+                            android:layout_marginLeft="20dp"
+                            android:layout_marginRight="20dp"
+                            android:layout_weight="0.33"
+                            android:background="@drawable/style_button"
+                            android:text="@string/play_video"
+                            android:textColor="@color/white"
+                            app:fontFamily="@font/roboto_bold" />
+
+                        <Button
+                            android:id="@+id/bt_edit"
+                            style="?android:attr/buttonBarButtonStyle"
+                            android:layout_width="wrap_content"
+                            android:layout_height="30dp"
+                            android:layout_marginLeft="20dp"
+                            android:layout_marginRight="20dp"
+                            android:layout_weight="0.33"
+                            android:background="@drawable/style_button_white"
+                            android:text="@string/edit"
+                            android:textColor="@color/colorBlack"
+                            app:fontFamily="@font/roboto_bold" />
+
+                        <Button
+                            android:id="@+id/bt_upload"
+                            style="?android:attr/buttonBarButtonStyle"
+                            android:layout_width="wrap_content"
+                            android:layout_height="30dp"
+                            android:layout_marginLeft="20dp"
+                            android:layout_marginRight="20dp"
+                            android:layout_weight="0.33"
+                            android:background="@drawable/style_button_white"
+                            android:text="@string/upload"
+                            android:textColor="@color/colorBlack"
+                            app:fontFamily="@font/roboto_bold" />
+                    </LinearLayout>
+                </LinearLayout>
+
+                <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+                    xmlns:tools="http://schemas.android.com/tools"
+                    android:id="@+id/re_tags"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.7"
+                    android:padding="20dp" />
+
             </LinearLayout>
-        </LinearLayout>
-
-        <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:id="@+id/re_tags"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="0.7"
-            android:padding="20dp" />
-
-    </LinearLayout>
+        </android.support.constraint.ConstraintLayout>
+    </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
