--- a/app/src/main/res/layout-land/activity_info_video.xml
+++ b/app/src/main/res/layout-land/activity_info_video.xml
@@ -13,6 +13,10 @@
             tools:layout_editor_absoluteX="0dp"
             tools:layout_editor_absoluteY="340dp" />
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -107,6 +111,7 @@
         
 
         </android.support.constraint.ConstraintLayout>
+    </ScrollView>
 
         <android.support.constraint.ConstraintLayout
             android:id="@+id/confirm_delete"
