--- a/app/src/main/res/layout-land/activity_selected_video.xml
+++ b/app/src/main/res/layout-land/activity_selected_video.xml
@@ -11,6 +11,10 @@
             layout="@layout/toolbar"
             android:id="@+id/appBar"/>
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -116,5 +120,6 @@
                 android:padding="20dp" />
 
         </LinearLayout>
+    </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
