--- a/app/src/main/res/layout-land/activity_profil.xml
+++ b/app/src/main/res/layout-land/activity_profil.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ProfilActivity"
-    android:background="@drawable/bg">
+    android:background="@drawable/bg"
+    tools:context=".ProfilActivity">
 
     <include
         android:id="@+id/appBar"
