--- a/app/src/main/res/layout-land/activity_start.xml
+++ b/app/src/main/res/layout-land/activity_start.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".StartActivity"
-    android:background="@drawable/bg">
+    android:background="@drawable/bg"
+    tools:context=".StartActivity">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -14,7 +14,7 @@
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <include
                 android:id="@+id/appBar"
@@ -238,11 +238,11 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:alpha="0.86"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@color/colorDarkBlueGrey"
-            android:alpha="0.86"/>
+            app:srcCompat="@color/colorDarkBlueGrey" />
 
 
         <android.support.constraint.ConstraintLayout
@@ -284,10 +284,10 @@
                 android:id="@+id/tv_url"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="16dp"
                 android:layout_marginTop="20dp"
                 android:background="@android:color/black"
                 android:gravity="center"
+                android:padding="16dp"
                 android:text="@string/url"
                 android:textColor="@color/white"
                 android:textSize="24sp"
