--- a/app/src/main/res/layout/activity_add_grid.xml
+++ b/app/src/main/res/layout/activity_add_grid.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg"
-    tools:context=".AddGridActivity"
-    android:padding="4dp">
+    android:padding="4dp"
+    tools:context=".AddGridActivity">
 
 
     <LinearLayout
@@ -23,14 +23,15 @@
             android:id="@+id/iv_color"
             android:layout_width="30dp"
             android:layout_height="30dp"
+            android:layout_gravity="center_vertical"
             android:layout_weight="1"
-            android:background="@android:color/darker_gray"
-            android:layout_gravity="center_vertical"/>
+            android:background="@android:color/darker_gray" />
 
         <EditText
             android:id="@+id/et_name"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
+            android:layout_gravity="center_vertical"
             android:layout_marginLeft="8dp"
             android:layout_weight="1"
             android:background="@drawable/style_input"
@@ -41,8 +42,7 @@
             android:textColorHint="@color/white"
             app:fontFamily="@font/roboto"
             tools:layout_editor_absoluteX="116dp"
-            tools:layout_editor_absoluteY="58dp"
-            android:layout_gravity="center_vertical"/>
+            tools:layout_editor_absoluteY="58dp" />
 
         <Button
             android:id="@+id/btn_chosse_color"
