--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:background="@color/colorDarkBlueGrey25"
         android:minHeight="?attr/actionBarSize"
-        app:titleTextColor="@color/white"
-        app:fontFamily="@font/roboto_bold"/>
+        app:fontFamily="@font/roboto_bold"
+        app:titleTextColor="@color/white" />
 
 </android.support.constraint.ConstraintLayout>
