--- a/app/src/main/res/layout-land/activity_start.xml
+++ b/app/src/main/res/layout-land/activity_start.xml
@@ -40,7 +40,7 @@
                         android:layout_marginLeft="32dp"
                         android:layout_marginStart="32dp"
                         android:layout_marginTop="32dp"
-                        android:text="@string/infor_session"
+                        android:text="@string/info_session"
                         android:textColor="@color/white"
                         app:fontFamily="@font/roboto_bold"
                         app:layout_constraintStart_toStartOf="parent"
@@ -149,7 +149,7 @@
                         android:layout_marginTop="8dp"
                         android:background="@drawable/style_input"
                         android:ems="10"
-                        android:hint="@string/title_grille"
+                        android:hint="@string/grid_title"
                         android:inputType="textPersonName"
                         android:textColor="@color/white"
                         android:textColorHint="@color/white"
