regex image upload video ok

--- a/app/src/main/res/layout/item_video.xml
+++ b/app/src/main/res/layout/item_video.xml
@@ -22,7 +22,8 @@
         <ImageView
             android:id="@+id/img_upload_video"
             android:layout_width="20dp"
-            android:layout_height="20dp" />
+            android:layout_height="20dp"
+            android:src="@drawable/icons8_stockage_cloud_priv__96"/>
 
         <TextView
             android:id="@+id/title_video"
