réglages conflits après 3 pull request

--- a/app/src/main/res/layout-land/activity_info_video.xml
+++ b/app/src/main/res/layout-land/activity_info_video.xml
@@ -9,9 +9,7 @@
 
     <include
         android:id="@+id/appBar"
-        layout="@layout/toolbar"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="340dp" />
+        layout="@layout/toolbar" />
 
     <ScrollView
         android:layout_width="match_parent"
