--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,7 @@
     <color name="colorSoftBlue">#6977E7</color>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorDarkGreyBlueTwo">#343F6D</color>
-    <color name="colorDarkBlueGrey">#0D1725</color>
+    <color name="colorDarkBlueGrey">#0d1725</color>
     <color name="colorWhiteTwo">#d8d8d8</color>
 
 
