--- a/app/src/main/res/layout-land/activity_record.xml
+++ b/app/src/main/res/layout-land/activity_record.xml
@@ -86,6 +86,8 @@
                         android:id="@+id/horizontalScrollView"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
+                        android:scrollbarThumbHorizontal="@color/colorDarkBlueGrey"
+                        android:scrollbarTrackHorizontal="@android:color/background_light"
                         android:scrollbars="horizontal"
                         app:layout_constraintEnd_toEndOf="@id/video_view"
                         tools:layout_editor_absoluteY="188dp">
