association couleur tag au tag timeline

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,7 +23,7 @@
     <color name="colorDusk">#4A6085</color>
     <color name="colorDuskTwo">#4A5479</color>
     <color name="colorCharcoalGrey">#3B4648</color>
-    <color name="colorCharcoal">#222A2C</color>
+    <color name="colorCharcoal">#222a2c</color>
 
 
 
