--- a/app/src/main/res/layout-land/activity_record.xml
+++ b/app/src/main/res/layout-land/activity_record.xml
@@ -62,6 +62,34 @@
                             app:layout_constraintTop_toBottomOf="@+id/bt_record"
                             app:srcCompat="@android:drawable/checkbox_on_background" />
 
+                        <Chronometer
+                            android:id="@+id/chronometer"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+
+                            android:layout_marginEnd="40dp"
+                            android:layout_marginRight="40dp"
+                            android:layout_marginTop="16dp"
+                            android:background="@color/colorCharcoal"
+                            android:gravity="center"
+                            android:padding="10dp"
+                            android:textColor="@color/color9"
+                            android:textStyle="bold"
+                            app:layout_constraintEnd_toEndOf="@+id/video_view"
+                            app:layout_constraintTop_toBottomOf="@+id/bt_finish" />
+
+                        <TextView
+                            android:id="@+id/timerTextView"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="24dp"
+                            android:layout_marginRight="24dp"
+                            android:layout_marginTop="8dp"
+                            android:text="TextView"
+                            android:textColor="@android:color/background_light"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/chronometer" />
+
                         <FrameLayout
                             android:id="@+id/video_view"
                             android:layout_width="match_parent"
@@ -70,24 +98,7 @@
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             >
-                            <Chronometer
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:id="@+id/chronometer"
-                                android:layout_alignParentTop="true"
-                                android:layout_centerHorizontal="true"
-                                android:background="#000000"
-                                android:gravity="center"
-                                android:padding="10dp"
-                                android:textColor="#1aff00"
-                                android:textStyle="bold"
-                                android:layout_marginTop="102dp" />
-                            <TextView
-                                android:id="@+id/timerTextView"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="TextView"
-                                android:textColor="@android:color/background_light" />
+
                         </FrameLayout>
 
 
